--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ textarea{
     margin: 1rem;
     padding: 1rem;
 }
+div{
+    font-size: larger;
+}
+#output{
+    border: 1px solid black;
+    width: 70%;
+    height: 20vh;
+    display: block;
+    margin: 1rem;
+    padding: 1rem;
+}
